tree-sitter-outrun/test/corpus/collections_complex_nested.txt
================
Complex nested collections
================

def complex_data(): Map<String, List<(Integer, Boolean)>> {
    {
        users: [(1, true), (2, false)],
        groups: [],
        config: [(42, true)]
    }
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))
          (generic_args
            (type_annotation
              (module_path
                (type_identifier)))
            (type_annotation
              (module_path
                (type_identifier))
              (generic_args
                (type_annotation
                  (tuple_type
                    (type_annotation
                      (module_path
                        (type_identifier)))
                    (type_annotation
                      (module_path
                        (type_identifier))))))))))
      (block
        (statement
          (expression
            (primary_expression
              (map_literal
                (map_entry
                  (map_shorthand_pair
                    (identifier)
                    (expression
                      (primary_expression
                        (list_literal
                          (expression
                            (primary_expression
                              (tuple_literal
                                (expression
                                  (primary_expression
                                    (literal
                                      (integer))))
                                (expression
                                  (primary_expression
                                    (literal
                                      (boolean)))))))
                          (expression
                            (primary_expression
                              (tuple_literal
                                (expression
                                  (primary_expression
                                    (literal
                                      (integer))))
                                (expression
                                  (primary_expression
                                    (literal
                                      (boolean))))))))))))
                (map_entry
                  (map_shorthand_pair
                    (identifier)
                    (expression
                      (primary_expression
                        (list_literal)))))
                (map_entry
                  (map_shorthand_pair
                    (identifier)
                    (expression
                      (primary_expression
                        (list_literal
                          (expression
                            (primary_expression
                              (tuple_literal
                                (expression
                                  (primary_expression
                                    (literal
                                      (integer))))
                                (expression
                                  (primary_expression
                                    (literal
                                      (boolean))))))))))))))))))))
